--- a/config/database.yml
+++ b/config/database.yml
@@ -17,7 +17,7 @@ development:
   encoding: unicode
   database: image_ranker_development
   pool: 5
-  username: cbordeleau
+  username: cjbordeleau
   password:
 
   # Connect on a TCP socket. Omitted by default since the client uses a
@@ -43,6 +43,6 @@ test:
   encoding: unicode
   database: image_ranker_test
   pool: 5
-  username: cbordeleau
+  username: cjbordeleau
   password:
 
